force-app/main/default/objects/SystemSetting__mdt/SystemSetting__mdt.object-meta.xml
<CustomObject>
    <description>Centralized Custom Metadata Type to store settings to be used across the org.</description>
    <label>System Setting</label>
    <pluralLabel>System Settings</pluralLabel>
</CustomObject>