force-app/main/default/objects/SystemSetting__mdt/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <description>This field lets you group settings together, helping this simple setting object to be used for multiple purposes.</description>
    <label>Category</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Feature Activation</fullName>
                <default>true</default>
                <label>Feature Activation</label>
            </value>
            <value>
                <fullName>Feature Version</fullName>
            </value>
            <value>
                <fullName>Trigger Action Disable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>