force-app/main/default/objects/SystemSetting__mdt/fields/Key__c.field-meta.xml
<CustomField>
    <fullName>Key__c</fullName>
    <description>The Key by which this setting will be known. For example, if you have a record to disable a Trigger action, the Category__c will be &quot;Trigger Action Disable&quot;, the Key__c will be &quot;AccountTriggerHandler.afterUpdate&quot;.</description>
    <label>Key</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>