force-app/main/default/objects/SystemSetting__mdt/fields/Value__c.field-meta.xml
<CustomField>
    <fullName>Value__c</fullName>
    <description>The basic value. This will often be &quot;true&quot; or &quot;false&quot;, but you can store other things here, like API endpoints, etc.</description>
    <label>Value</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>